--- a/assets/styles/frontend/common/components/box/gallery.less
+++ b/assets/styles/frontend/common/components/box/gallery.less
@@ -51,7 +51,7 @@
         font-size: 0;
 
         &:hover {
-            border: @box-gallery-item-border-size-hover solid @color-border;
+            border: @box-gallery-item-border-size-hover solid @color-border-dark;
 
             .box-gallery__item__link {
                 width: @box-gallery-item-size - @box-gallery-item-border-size-hover*2;
