--- a/assets/styles/frontend/common/components/list/last-visited.less
+++ b/assets/styles/frontend/common/components/list/last-visited.less
@@ -31,6 +31,10 @@
         align-items: stretch;
     }
 
+    .slick-dots {
+        display: none !important;
+    }
+
     &__arrow {
         position: absolute;
         top: 50%;
@@ -95,10 +99,7 @@
             height: 100%;
 
             color: @color-base;
-
-            &:hover {
-                text-decoration: none;
-            }
+            text-decoration: none;
         }
 
         &__image {
