--- a/assets/styles/frontend/common/layout/header/contact-us.less
+++ b/assets/styles/frontend/common/layout/header/contact-us.less
@@ -29,6 +29,7 @@
             color: @color-f;
             font-size: @font-size;
             font-weight: 700;
+            text-decoration: none;
 
             &:hover {
                 text-decoration: none;
