--- a/assets/styles/frontend/common/layout/header/top-bar.less
+++ b/assets/styles/frontend/common/layout/header/top-bar.less
@@ -65,9 +65,11 @@
                     font-size: @font-size-extra-small + 1px;
                     font-family: @font-alt;
                     color: @color-base;
+                    text-decoration: none;
 
                     &:hover {
                         color: @color-base;
+                        text-decoration: underline;
                     }
                 }
 
