--- a/templates/Front/Content/Product/boxTabs.html.twig
+++ b/templates/Front/Content/Product/boxTabs.html.twig
@@ -90,7 +90,7 @@
                                 <div class="wrap-gradient">
                                     <div class="wrap-gradient__in">
                                         <div class="box-detail__tags">
-                                            <div class="box-detail__tags__title">{{ 'Najdete v kategoriích'|trans }}</div>
+                                            <div class="box-detail__tags__title">{{ 'Produkt se nachází v kategoriích'|trans }}</div>
                                             {{ _self.productCategoryDomains(productVisibleProductCategoryDomains) }}
                                         </div>
                                     </div>
