--- a/templates/Front/Content/Product/productAvailabilityMacro.html.twig
+++ b/templates/Front/Content/Product/productAvailabilityMacro.html.twig
@@ -11,7 +11,7 @@
         <span class="in-availability__date in-availability__date--out-of-stock">{{ 'Product no longer on sale'|trans }}</span>
     {% elseif inStock %}
         <span class="in-availability__date">
-            {{ 'Skladem v eshopu'|trans }}
+            {{ 'Skladem v e-shopu'|trans }}
         </span>
     {% elseif showNotAvailable %}
         <span class="in-availability__date in-availability__date--not-available">{{ 'Momentálně nedostupné'|trans }}</span>
