--- a/templates/Front/Content/Customer/edit.html.twig
+++ b/templates/Front/Content/Customer/edit.html.twig
@@ -53,12 +53,12 @@
                 </div>
             </div>
 
-            <div id="{{ form.billingAddressData.vars.id }}">
+            <div id="{{ form.billingAddressData.vars.id }}" class="js-billing-address-form">
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Company data'|trans }}</h2>
                     <div class="wrap-box__in">
                         {{ form_widget(form.billingAddressData.companyCustomer, {
-                        attr: { class: 'css-checkbox js-checkbox-toggle', 'data-checkbox-toggle-container-id': 'js-company-fields' }})
+                        attr: { class: 'css-checkbox js-checkbox-toggle js-billing-address-company-customer', 'data-checkbox-toggle-container-id': 'js-company-fields' }})
                         }}
                         <label class="css-checkbox__image" for="{{ form.billingAddressData.companyCustomer.vars.id }}">
                             {{ 'I buy on company behalf'|trans }}
@@ -83,13 +83,13 @@
                 </div>
             </div>
 
-            <div id="{{ form.deliveryAddressData.vars.id }}">
+            <div id="{{ form.deliveryAddressData.vars.id }}" class="js-delivery-address-form">
                 <div class="wrap-box">
                     <h2 class="wrap-box__title">{{ 'Doručovací adresy'|trans }}</h2>
                     <div class="wrap-box__in">
                         {{ form_row(form.customerUserData.defaultDeliveryAddress) }}
                         {{ form_widget(form.deliveryAddressData.addressFilled, {
-                            attr: { class: 'css-checkbox js-checkbox-toggle js-delivery-address-toggle', 'data-checkbox-toggle-container-id': 'js-delivery-address-fields' }})
+                            attr: { class: 'css-checkbox js-checkbox-toggle js-delivery-address-address-filled', 'data-checkbox-toggle-container-id': 'js-delivery-address-fields' }})
                         }}
                         <label class="css-checkbox__image" for="{{ form.deliveryAddressData.addressFilled.vars.id }}">
                             {{ 'Chci zadat novou doručovací adresu'|trans }}
