--- a/assets/styles/frontend/common/components/in/add-to-cart.less
+++ b/assets/styles/frontend/common/components/in/add-to-cart.less
@@ -62,4 +62,11 @@
 
 .in-add-to-cart-variant {
     font-size: 16px;
+
+    &--in-slider {
+        padding: 0 16px;
+        width: 100%;
+        
+        font-size: 12px;
+    }
 } 
