--- a/templates/Front/Inline/Cart/productAction.html.twig
+++ b/templates/Front/Inline/Cart/productAction.html.twig
@@ -2,9 +2,15 @@
 {% set productActionView = productView.action %}
 
 {% if productActionView.mainVariant %}
-    <a href="{{ productActionView.detailUrl }}" class="in-add-to-cart-variant btn btn--big btn--success {{ buttonSizeClass }}">
-        {{- 'Choose variant'|trans -}}
-    </a>
+    {% if type == "slider"%}
+        <a href="{{ productActionView.detailUrl }}" class="in-add-to-cart-variant in-add-to-cart-variant--in-slider btn btn--big btn--success {{ buttonSizeClass }}">
+            {{- 'Choose variant'|trans -}}
+        </a>
+    {% else %}
+        <a href="{{ productActionView.detailUrl }}" class="in-add-to-cart-variant btn btn--big btn--success {{ buttonSizeClass }}">
+            {{- 'Choose variant'|trans -}}
+        </a>
+    {% endif %}
 {% else %}
     {% set outOfStock = productView.stockQuantity <= 0 %}
     {% set cssClass = '' %}
