Extracted the part that is similar for regular products and product sets in product list to a new macro. Added default value for group items to elastic converter. Removed unnecessary properties from listed group item.

--- a/assets/styles/admin/todo.less
+++ b/assets/styles/admin/todo.less
@@ -30,3 +30,8 @@
 input[disabled], textarea[disabled] {
     background-color: lightgrey;
 }
+
+//TODO KOD: TF-79 https://shopsys.atlassian.net/browse/TF-79
+.list-products__item__set {
+    border: 5px solid red;
+}
