[TF-69] Pohoda transfer - Export Customers - extSystemIdent changed to ShopsysB2C
- ident "ShopSys" was used on previous version of eshop

--- a/templates/Component/Transfer/Pohoda/Customer/addressBook.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Customer/addressBook.xml.twig
@@ -2,9 +2,9 @@
 <?xml version="1.0" encoding="Windows-1250" ?>
 <dat:dataPack id="a55"
 	ico="{{ pohodaCompanyIco }}"
-	application="Import Adresáře ShopSys"
+	application="Import Adresáře Shopsys"
 	version="2.0"
-	note="Import Adresáře ShopSys"
+	note="Import Adresáře Shopsys"
 	xmlns:dat="http://www.stormware.cz/schema/version_2/data.xsd"
 	xmlns:adb="http://www.stormware.cz/schema/version_2/addressbook.xsd"
 	xmlns:ord="http://www.stormware.cz/schema/version_2/order.xsd"
@@ -19,8 +19,8 @@
 					<ftr:filter>
 						<ftr:extId>
 							<typ:ids>{{ pohodaCustomer.eshopId }}</typ:ids>
-							<typ:exSystemName>ShopSys</typ:exSystemName>
-							<typ:exSystemText>ShopSys</typ:exSystemText>
+							<typ:exSystemName>ShopsysB2C</typ:exSystemName>
+							<typ:exSystemText>ShopsysB2C</typ:exSystemText>
 						</ftr:extId>
 					</ftr:filter>
 				</adb:update>
@@ -29,8 +29,8 @@
 				<adb:identity>
 					<typ:extId>
 						<typ:ids>{{ pohodaCustomer.eshopId }}</typ:ids>
-						<typ:exSystemName>ShopSys</typ:exSystemName>
-						<typ:exSystemText>ShopSys</typ:exSystemText>
+						<typ:exSystemName>ShopsysB2C</typ:exSystemName>
+						<typ:exSystemText>ShopsysB2C</typ:exSystemText>
 					</typ:extId>
 
 					<typ:address>
