design: show only 1 row of product flags

--- a/assets/styles/frontend/common/components/in/flag.less
+++ b/assets/styles/frontend/common/components/in/flag.less
@@ -24,12 +24,10 @@
         bottom: auto;
     }
 
-    &--slider {
+    &--product-list, &--slider {
         position: static;
-    }
-
-    &--product-list {
-        position: static;
+        overflow: hidden;
+        height: @in-flag-item-height + @in-flag-item-gap;
     }
 
     &__item {
