--- a/assets/styles/frontend/common/components/list/menu.less
+++ b/assets/styles/frontend/common/components/list/menu.less
@@ -285,6 +285,7 @@
 
                 font-size: @font-size;
                 color: @list-menu-submenu-item-color;
+                text-decoration: none;
 
                 @media @query-vl {
                     font-weight: 700;
